<resources>
    <string name="app_name">uPraxis Exam</string>
    <string name="persons_list">Persons List</string>
    <string name="person_full_name">%1$s %2$s</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="pull_down_to_refresh">Pull down to refresh</string>
    <string name="person_details">Person Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="address">Address</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_person_phone_no">Contact Person\'s Phone No.</string>
</resources>