<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:orientation="vertical"
        tools:context=".presentation.persondetails.PersonDetailsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="4dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/person_details"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/first_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/first_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="Vincent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/last_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/last_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="Brooks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/birthday"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/birthday_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="January 30, 1990" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/age"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/age_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="31" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/email_address"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/email_address_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="vincent.brooks@mail.com" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/mobile_no"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/mobile_no_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="09123456789" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/address"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/address_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="850 Marsh Lane Abingdon, MD 21009" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/contact_person"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/contact_person_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="Katherine McBride" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/contact_person_phone_no"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />

                    <TextView
                        android:id="@+id/contact_person_phone_no_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        tools:text="09987654321" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>